--- a/school_reg/register/templates/register/teacher_class_subject.html
+++ b/school_reg/register/templates/register/teacher_class_subject.html
@@ -4,7 +4,7 @@
           <div class="media-body">
           <h4>Klasy których uczysz</h4><br>
           {% if subjects %}
-              <table>
+              <table class="table">
                     <tr>
                         <th>Przedmiot, klasa, wychowawca</th>
                         <th>Dodawanie ocen</th>
