--- a/school_reg/register/templates/register/detail_classes.html
+++ b/school_reg/register/templates/register/detail_classes.html
@@ -7,7 +7,11 @@
                     <h4>Opis: {{ detail_class.description }}</h4>
                     <h4>Wychowawca: {{ detail_class.educator }}</h4>
                     <h5><a href="{% url 'class-schedule' detail_class.id %}">Plan zajęć</a></h5>
-                    <h4><a href="{% url 'add-advert-class' detail_class.id %}">Dodanie ogloszenia</a></h4>
+                        {% if user.profile.role == 2 %}
+                            {% if user.teacher == detail_class.educator %}
+                                <h4><a href="{% url 'add-advert-class' detail_class.id %}">Dodanie ogloszenia</a></h4>
+                            {% endif %}
+                        {% endif %}
                 </div>
             </div>
             <article class="media content-section">
