--- a/school_reg/register/templates/register/teacher_class_grades.html
+++ b/school_reg/register/templates/register/teacher_class_grades.html
@@ -10,7 +10,7 @@
         <h4><a href="{% url 'class-grade-add' class_id subject.id %}">Dodawanie ocen</a></h4>
         <h4><a href="{% url 'class-presence-add' class_id subject.id %}">Sprawdzenie obecności</a></h4>
         <h4><a href="{% url 'add-advert-class' class_id %}">Dodanie ogloszenia</a></h4>
-            <table cellpadding="6">
+            <table class="table">
                 <tr>
                   <th>Imie i nazwisko</th>
                   {% for cat in categories %}
