--- a/school_reg/register/templates/register/detail_classes_add_grade.html
+++ b/school_reg/register/templates/register/detail_classes_add_grade.html
@@ -6,18 +6,14 @@
                 <div class="media-body">
                     <h2 class="account-heading">Klasa: {{ detail_class.name }}</h2>
                     <h4>Opis: {{ detail_class.description }}</h4>
-                    <h4>Wychowawca: {{ detail_class.educator }}</h4>
+                    <h4>
+                        Wychowawca: <a href="{% url 'teacher-details' detail_class.educator.id %}">
+                        {{ detail_class.educator }}</a>
+                    </h4>
                     <h4>Przedmiot: {{ subject.name }}
-{#                    <form method="post" enctype="multipart/form-data">#}
-{#                    <select name="subject">#}
-{#                        {% for s in subject %}#}
-{#                        <option value="{{ s.name }}">{{ s.name }}</option>#}
-{#                        {% endfor %}#}
-{#                    </select>#}
-{#                    </form>#}
                     </h4>
                     {% teacher_class_subject subject detail_class as teacher %}
-                    <h4>Nauczyciel przedmiotu: {{ teacher }}</h4>
+                    <h4>Nauczyciel przedmiotu: <a href="{% url 'teacher-details' teacher.id %}">{{ teacher }}</a></h4>
                 </div>
             </div>
             <article class="media content-section">
@@ -36,19 +32,8 @@
                                 {% endfor %}
 
                             </ol>
-{#                            <a class="mr-2" href="#">{{ classs }}</a>#}
-    {#                        {% if 'register' in perms %}#}
-    {#                            {% if 'register.change_clasess' in perms %}#}
-    {#                                <a class="small float-right" href="{% url 'class-edit' classs.id %}">modyfikuj</a>#}
-    {#                            {% endif %}#}
-    {#                        {% endif %}#}
                         </div>
               </div>
             </article>
         </div>
-{#    {% if 'register' in perms %}#}
-{#        {% if 'register.add_clasess' in perms %}#}
-{#            <h3><a class="btn btn-outline-info small" href="{% url 'class-add' %}">dodaj</a></h3>#}
-{#        {% endif %}#}
-{#    {% endif %}#}
 {% endblock content %}
