--- a/school_reg/register/templates/register/main.html
+++ b/school_reg/register/templates/register/main.html
@@ -9,7 +9,10 @@
             <article class="media content-section">
               <div class="media-body">
                 <div class="article-metadata">
-                    <p class="mr-2">{{ advert.author.first_name }} {{ advert.author.last_name }}
+                    <p class="mr-2">
+                        <a href="{% url 'teacher-details' advert.author.id %}">
+                                {{ advert.author.first_name }} {{ advert.author.last_name }}
+                            </a>
                     {% if advert.author == request.user %}
                         <a href="{% url 'edit-advert' advert.id %}" class="float-right">Modyfikuj</a>
                     {% endif %}
