--- a/school_reg/register/templates/register/student_details.html
+++ b/school_reg/register/templates/register/student_details.html
@@ -9,7 +9,11 @@
                     Imie i nazwisko: {{ student.user.first_name }} {{ student.user.last_name }}
                 </h4>
                 <h4>Klasa: {{ student.classes.name }}</h4>
-                <h4>Wychowawca: {{ student.classes.educator }}</h4>
+                <h4>Wychowawca:
+                    <a href="{% url 'teacher-details' student.classes.educator.id %}">
+                        {{ student.classes.educator }}
+                    </a>
+                </h4>
                 {% if user.profile.role == 2 %}
                     <a href="{% url 'add-notice' student.id %}">Dodaj uwagę</a>
                 {% endif %}
