--- a/school_reg/register/templates/register/parent_view.html
+++ b/school_reg/register/templates/register/parent_view.html
@@ -2,17 +2,21 @@
 {% load crispy_forms_tags %}
 {% load register.extras %}
 {% block content %}
-    <div class="jumbotron bg-steel-2 text-center">
-        <h4 class="display-4">Panel rodzica</h4>
+    <div class="text-center">
+        <h2>Panel rodzica</h2>
         <hr class="my-4">
             <p class="lead">
                 <div class="d-flex justify-content-center flex-wrap">
                     {% if children %}
+                        <table>
                         {% for child in children %}
-                            <a class="btn btn-lg btn-info btn-main m-2" href="{% url 'class-details' child.classes.id %}" role="button">Klasa {{ child.user.first_name }}</a>
-                            <a class="btn btn-lg btn-info btn-main m-2" href="{% url 'class-schedule' child.classes.id %}" role="button">Plan zajęć {{ child.user.first_name }}</a>
-                            <a class="btn btn-lg btn-info btn-main m-2" href="{% url 'notices-parent' child.id %}" role="button">Uwagi dla {{ child.user.first_name }}</a>
+                            <tr>
+                            <td><a class="btn btn-lg btn-info btn-main m-2" href="{% url 'class-details' child.classes.id %}" role="button">Klasa {{ child.user.first_name }}</a></td>
+                            <td><a class="btn btn-lg btn-info btn-main m-2" href="{% url 'class-schedule' child.classes.id %}" role="button">Plan zajęć {{ child.user.first_name }}</a></td>
+                            <td><a class="btn btn-lg btn-info btn-main m-2" href="{% url 'notices-parent' child.id %}" role="button">Uwagi dla {{ child.user.first_name }}</a></td>
+                            </tr>
                         {% endfor %}
+                        </table>
                     {% endif %}
                 </div>
             </p>
