--- a/school_reg/register/templates/register/presence_check.html
+++ b/school_reg/register/templates/register/presence_check.html
@@ -2,7 +2,7 @@
 {% load register.extras %}
 {% load static %}
 {% block js_load %}
-    <script src="{% static "register/main.js" %}" type="text/javascript"></script>
+    <script src="{% static "register/checkbox.js" %}" type="text/javascript"></script>
 {% endblock js_load %}
 {% block content %}
         <div class="content-section">
