--- a/school_reg/register/templates/register/teacher_view.html
+++ b/school_reg/register/templates/register/teacher_view.html
@@ -2,8 +2,8 @@
 {% load crispy_forms_tags %}
 {% load register.extras %}
 {% block content %}
-    <div class="jumbotron bg-steel-2 text-center">
-        <h4 class="display-4">Panel nauczyciela</h4>
+    <div class="text-center">
+        <h2>Panel nauczyciela</h2>
         <hr class="my-4">
             <p class="lead">
                 <div class="d-flex justify-content-center flex-wrap">
