--- a/school_reg/register/templates/register/base.html
+++ b/school_reg/register/templates/register/base.html
@@ -32,12 +32,14 @@
                 {% if user.profile.role == 2 %}
                     <a class="nav-item nav-link" href="{% url 'add-advert' %}">Dodaj ogloszenie</a>
                 {% endif %}
+
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
                 {% if user.is_authenticated %}
                     {% if user.profile.role == 1 %}
-                        <a class="nav-item nav-link" href="{% url 'announcements' %}">Powiadomienia</a>
+                        <a class="nav-item nav-link" href="{% url 'announcements' %}">
+                            Powiadomienia(<span id="msg_counter"></span>)</a>
                     {% endif %}
                     <a class="nav-item nav-link" href="{% url 'profile' %}">Konto ({{ user.username }})</a>
                     <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
@@ -49,7 +51,6 @@
         </div>
       </nav>
     </header>
-
     <main role="main" class="container">
       <div class="row">
         <div class="col-md-12">
@@ -76,12 +77,21 @@
       </div>
     </main>
 
-
+<dialog id="dialog">Proszę zmienić hasło do konta!</dialog>
  <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script
+        src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-{% block js_load %}{% endblock %}
+    {% if user.profile.role == 1 %}
+        <script src="{% static "register/counter_ann.js" %}" type="text/javascript"></script>
+    {% endif %}
+    {% if user.profile.role != 2 %}
+        <script src="{% static "register/password_change.js" %}" type="text/javascript"></script>
+    {% endif %}
+    {% block js_load %}{% endblock %}
 </body>
 </html>
