--- a/school_reg/register/templates/register/detail_classes.html
+++ b/school_reg/register/templates/register/detail_classes.html
@@ -1,4 +1,5 @@
 {% extends "register/base.html" %}
+{% load register.extras %}
 {% block content %}
         <div class="content-section">
             <div class="media">
@@ -23,7 +24,11 @@
                         <div class="article-metadata">
                             <ol>
                                 {% for student in students %}
+                                    {% if student|check_role:user %}
                                     <li><a href="{% url 'student-details' student.id %}">{{ student }}</a></li>
+                                    {% else %}
+                                    <li>{{ student }}</li>
+                                    {% endif %}
                                 {% endfor %}
                             </ol>
                         </div>
